--- a/rss.yaml
+++ b/rss.yaml
@@ -12,90 +12,24 @@
 #   tags: [tag1, tag2]
 #   filter: "Test"
 
-# Test for wrong url
-# - url: https://example.com
-# - url: https://a.c
-# - url: apple
-
-# Blog
-- url: https://feeds.feedburner.com/playpc
-  name: 電腦玩物
-  tags: [blog]
-- url: https://feeds.feedburner.com/ruanyifeng
-  name: 阮一峰的网络日志
-  tags: [blog]
-- url: https://feeds.feedburner.com/blogspot/gJZg
-  name: Google AI Blog
-  tags: [blog]
-- url: https://distill.pub/rss.xml
-  name: Distill
-  tags: [blog]
-# - url: https://kexue.fm/feed
-#   name: 科学空间
-- url: https://lilianweng.github.io/index.xml
-  name: Lil’Log
-  tags: [blog]
-- url: https://rss.shab.fun/blogs/wordpress/haogroot.com/
-  name: haogroot’s Blog
-  tags: [blog]
-- url: https://cjting.me/index.xml
-  name: CJ Ting’s Blog
-  tags: [blog]
-- url: https://rsshub.app/leemeng
-  tags: [blog]
-# - url: https://kill-the-newsletter.com/feeds/yzvb49b43esijjhr.xml
-#   name: www.workspaces.xyz
-- url: https://sspai.com/feed
-  name: 少数派
-  tags: [blog]
-
-# Game
-- url: https://gamejilu.com/rss/
-  name: Gamejilu 遊戲筆記
-  tags: [game]
-- url: https://www.4gamers.com.tw/rss/latest-news
-  name: 4gamers
-  tags: [game]
-
 # News
-- url: https://rss.shab.fun/github/issue/headllines/hackernews-daily
-  name: Hacker News
-  tags: [news]
-- url: https://www.ithome.com.tw/rss
-  name: iThome 新聞
-  tags: [news]
-- url: https://global.udn.com/rss/news/1020/8662
-  name: udn 轉角國際
-  tags: [news]
-- url: https://kill-the-newsletter.com/feeds/8l0fpgvxavoua8af.xml
-  name: 中央社日報
-  tags: [news]
-- url: https://www.twreporter.org/a/rss2.xml
-  name: 報導者 The Reporter
-  tags: [news]
-- url: https://www.phoronix.com/rss.php
-  name: Phoronix
-  tags: [news]
-- url: https://forum.manjaro.org/c/announcements/testing-updates.rss
-  name: Manjaro Testing Updates
-  tags: [news]
-- url: https://feeds.feedburner.com/zhihu-daily
-  name: 知乎日报
-  tags: [news]
-
-# Software
-- url: https://feeds.feedburner.com/freegroup
-  name: 免費資源網路社群
-  tags: [software]
-- url: https://feeds.appinn.com/appinns/
-  name: 小众软件
-  tags: [software]
-# - url: https://openingsource.org/feed/
-#   name: 开源工场
-# - url: https://kill-the-newsletter.com/feeds/bogl2fboluknjp7z.xml
-#   name: Probably Nothing
-#   tags: [software]
-
-# Story
-- url: https://api.feeddd.org/feeds/613381f91269c358aa0eada9
-  name: 魔宙
+- url: https://michaelwest.com.au/category/latest-posts/feed/
+  name: Michael West
+  tags: [politics,economy, article]
+  
+# Game B
+- url: https://www.jimruttshow.com/feed/podcast/
+  name: Jim Rutt Show
+  tags: [gameb, sensemaking, podcast]
+- url: https://lexfridman.com/category/ai/feed/
+  name: Lex Fridman Podcast
+  tags: [podcast, tech, gameb, sensemaking]
+- url: https://feeds.buzzsprout.com/424075.rss
+  name: Dark Horse Podcast
+  tags: [podcast, sensemaking, gameb]  
+  
+  
+# Tech
+- url: https://anchor.fm/s/2da69154/podcast/rss
+  name: Pod of Jake
+  tags: [podcast, tech, crypto]
