--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Run python file
+        env: 
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          TOKEN: ${{ secrets.TOKEN }}
         run: python ./main.py
