--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install feedparser
       - name: Run python file
         env: 
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
