--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
-            pip install feedparser pandas requests yaml zipfile
+            pip install feedparser pandas 
       - name: Run python file
         env: 
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
