--- a/rss.yaml
+++ b/rss.yaml
@@ -18,13 +18,13 @@
   tags: [politics,economy, article]
   
 # Game B
-- url: https://www.jimruttshow.com/feed/podcast/
+- url: https://yewtu.be/feed/channel/UCw1Sl_jFYRl2gbkBLp7w4lg
   name: Jim Rutt Show
   tags: [gameb, sensemaking, podcast]
 - url: https://lexfridman.com/category/ai/feed/
   name: Lex Fridman Podcast
   tags: [podcast, tech, gameb, sensemaking]
-- url: https://feeds.buzzsprout.com/424075.rss
+- url: https://yewtu.be/feed/playlist/PLjQ2gC-5yHEug8_VK8ve0oDSJLoIU4b93
   name: Dark Horse Podcast
   tags: [podcast, sensemaking, gameb]  
   
